# osrs-archive

./: .gitignore  Cargo.toml
.github/workflows/: check-update.yml
src/: actions.rs  config.rs  downloader.rs  file_ops.rs  github.rs  main.rs  version.rs
