[package]
name = "osrs-archive"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["stream"] }
octocrab = "0.44.1"
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive", "env"] }
sha2 = "0.10.9"
hex = "0.4.3"
futures-util = "0.3.31"
log = "0.4.28"
env_logger = "0.11.8"
goblin = "0.10.1"
regex = "1.11.2"