[package]
name = "osrs-archive"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "release-updater"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["stream", "json", "native-tls"], default-features = false }
octocrab = { version = "0.44.1"}
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive", "env"] }
sha2 = "0.10.9"
hex = "0.4.3"
futures-util = "0.3.31"
log = "0.4.28"
simple_logger = "5.0.0"
jsonwebtoken = { version = "9.3.1", features = ["pem", "simple_asn1"] }
serde = "1.0.219"
serde_json = "1.0.143"
bytes = "1.10.1"
once_cell = "1.21.3"
base64 = "0.22.1"
flate2 = "1.1.2"
pelite = { version = "0.10.0", features = ["resources_nostd"] }
zip = "5.0.0"
tempfile = "3.21.0"